.gsd/exec/bf779563-5ce5-47ab-bc50-7d8a3a9d8cd8.stdout
error[E0308]: mismatched types
   --> src/discovery.rs:235:29
    |
235 | ...                   extract_text_from_content(record.get("message")?.clone())
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<&str>`, found `Option<String>`
    |
    = note: expected enum `std::option::Option<&str>`
               found enum `std::option::Option<std::string::String>`
note: return type inferred to be `std::option::Option<&str>` here
   --> src/discovery.rs:235:55
    |
235 | ...                   extract_text_from_content(record.get("message")?.clone())
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^
help: try using `.as_deref()` to convert `std::option::Option<std::string::String>` to `std::option::Option<&str>`
    |
235 |                             extract_text_from_content(record.get("message")?.clone()).as_deref()
    |                                                                                      +++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `amux` (bin "amux") due to 1 previous error
